# PhD_Laboratory

./: pyproject.toml
notebooks/: prova.ipynb  report1.ipynb  report1_renew.ipynb
src/phd_laboratory/differential/: __init__.py  differential.py
src/phd_laboratory/fokker_planck/: __init__.py  gaussian.py  model.py
src/phd_laboratory/neuralnet/: __init__.py  diagnostic.py  templates.py
src/phd_laboratory/sde/: model.py
src/phd_laboratory/sde/euler_maruyama/: __init__.py  euler_maruyama.py
tests/: test_differential.py
