[project]
name = "PhD_Laboratory"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Stefano Magrini Alunno", email = "376971@studenti.unimore.it"},
]
dependencies = ["pre-commit>=4.5.1", "black>=26.1.0", "mypy>=1.19.1", "pytest>=9.0.2"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
